# Proton_data

./: .gitignore  aggregate.sh
combine_ntuple_proton/: .Xauthority  CMakeLists.txt  TOTEM21.txt  TOTEM22.txt  TOTEM42.txt  TestFiles.txt  compute_local.sh  dump.txt  process.sub  run.sh  run_n.sh  submit_computation.sh  yelberke.cc
combine_ntuple_proton/.cache/clangd/index/: main.cpp.1BEE8081157CFE53.idx  main.cpp.5B14F78077CF1956.idx  main.cpp.6AEEC7ED0A57DD8D.idx
combine_ntuple_proton/src/: main.cpp
proton_data_quality/: CMakeLists.txt  process.sub
proton_data_quality/.cache/clangd/index/: main.cpp.6AEEC7ED0A57DD8D.idx
proton_data_quality/src/: CMakeLists.txt  main.cpp
proton_pruning/: CMakeLists.txt  TOTEM20.txt  TOTEM23.txt  TOTEM40.txt  TOTEM41.txt  TOTEM43.txt  files22.txt  make_src_lists.sh  process.sub  run_indiv.sh  run_loose.sh  submit_computation.sh  yelberke.cc
proton_pruning/.cache/clangd/index/: main.cpp.5B14F78077CF1956.idx
proton_pruning/error/: 0.err
proton_pruning/output/: 0.out
proton_pruning/src/: .main.cpp.swp  CMakeLists.txt  main.cpp  main_cpp.d  main_cpp_ACLiC_dict_rdict.pcm
